# kasher

./: CMakeLists.txt  LICENSE  README.md  kate-liveshare.json
src/: guest_client.cpp  guest_client.h  host_server.cpp  host_server.h  ot_engine.cpp  ot_engine.h  participant.cpp  participant.h  plugin.cpp  plugin.h  protocol.h  session.cpp  session.h  tool_view.cpp  tool_view.h
